card-align-ment-fixed

--- a/style.css
+++ b/style.css
@@ -450,11 +450,29 @@ input::placeholder {
   height: 50px;
 }
 
+@media (max-width: 2500px) and (min-width: 2000px) {
+  .bg-image-desktop {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
+      url(./images/bg-desktop.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 80vh;
+  }
+}
 @media (max-width: 1900px) and (min-width: 1600px) {
   .bg-card {
     background-color: white;
     border: 1px solid #e9e9e9;
     margin-top: -300px;
+  }
+  .bg-image-desktop {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
+      url(./images/bg-desktop.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 65vh;
   }
 }
 
